--- a/src/components/Book/book.scss
+++ b/src/components/Book/book.scss
@@ -44,7 +44,7 @@
     display: flex;
     align-items: center;
 
-    .right {
+    .right-side {
       display: flex;
 
       input {
@@ -84,7 +84,7 @@
     }
   }
 
-  .left {
+  .left-side {
     color: #757575;
     width: 110px;
     text-transform: capitalize;
